--- a/2_palindrome.ipynb
+++ b/2_palindrome.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "2 palindrome.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "authorship_tag": "ABX9TyP7F31Hph9F6Mo4tugRYEOo",
       "include_colab_link": true
     },
