--- a/try_and_except_statement_3.ipynb
+++ b/try_and_except_statement_3.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "try and except statement 3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMlo0KoEO0JqMUm/CoyTQMe",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPiUWsPywfEWuMs0Ac6ugl6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,6 +38,7 @@
         "outputId": "75092ba0-cf9d-417a-c5a8-453cdfc7393f"
       },
       "source": [
+        "#first try with veriety \n",
         "astr='bob'\n",
         "try :\n",
         "  print('hello')\n",
@@ -45,7 +47,7 @@
         "except:\n",
         "  istr=-1\n",
         "print('done',istr)\n",
-        "\n",
+        "#second try with veriety \n",
         "astr='bob'\n",
         "try :\n",
         "  print('hello')\n",
@@ -54,7 +56,7 @@
         "except:\n",
         "  istr=-1\n",
         "print('done',istr)\n",
-        "\n",
+        "#third try with veriety \n",
         "astr='bob'\n",
         "try :\n",
         "  print('hello')\n",
@@ -64,7 +66,7 @@
         "  istr=-1\n",
         "  print('there')\n",
         "print('done',istr)\n",
-        "\n",
+        "#fourth try with veriety \n",
         "astr='Bob'\n",
         "try :\n",
         "  print('Hello')\n",
